added image loading icon default limit set to 1

--- a/client/templates/common/image.html
+++ b/client/templates/common/image.html
@@ -7,7 +7,7 @@
             <a href="{{url}}" class="cbp-caption cbp-singlePageInline"
                data-title="{{title}}" data-lightbox={{getCurrentCategory}}>
                 <img src="{{url}}" alt="" class="img-thumbnail">
-                <div class="loader"> hello </div>
+                
             </a>
          
          </div>
@@ -34,5 +34,7 @@
              </div>
           </div>
         </div>
+    <div class="loader"> Images are loading .... </div>
     </div>
+
 </template>
