--- a/client/templates/pages/gallery.html
+++ b/client/templates/pages/gallery.html
@@ -31,7 +31,7 @@
                <!--  <span class="stretch"></span>  -->
                 {{> addInfo}} 
             </div>
-               
+               <div class="loader"> Images are loading .... </div>
             <!-- End Cube Portfolio -->
     </div>
     <!-- End Portfolio -->
