client request changes

--- a/client/templates/common/footer.html
+++ b/client/templates/common/footer.html
@@ -32,9 +32,9 @@
                 <!-- Address -->
                 <div class="col-md-4 map-img md-margin-bottom-40">
                     <div class="headline"><h2>My other websites</h2></div>
-                    You can also see and buy my creations by clicking on these links:
+                    You can also see and buy my creations
+                    by clicking on these links:
                     <br/>
-                    <a href="www.larkgallery.com">www.larkgallery.com</a><br/>
                     <a href="www.larkpilinskyart.com">www.larkpilinskyart.com</a>
                     
                 </div><!--/col-md-3-->
