--- a/client/templates/common/navbar.html
+++ b/client/templates/common/navbar.html
@@ -33,7 +33,11 @@
                                 About
                             </a>
                         </li>
-
+                        <li>
+                            <a href="larkgallery.devois.com/#bio">
+                                BIO
+                            </a>
+                        </li>
                         <li>
                             <a href="{{pathFor 'gallery'}}">
                                 Gallery
