--- a/client/templates/pages/home.html
+++ b/client/templates/pages/home.html
@@ -64,7 +64,7 @@
 
 
     <div class="bg-grey content-sm">
-
+      <a id="bio"> 
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -77,16 +77,14 @@
                     </div>
                 </div>
             </div>
-
+                    
            <div class="row">
             <div class="col-md-6">
                 <p>Born in the remote mountains of central Asia, where her father was a geologist, and surrounded by wild nature, beautiful minerals and semi-precious stones, Lark (Larisa Pilinsky) developed from her childhood intimate relationship with the world around her.</p>
 
                 <p>"Nature for me is alive, tender, joyful and suffering, she tells me about her feelings and helps me to share mine through art and poetry. She gives me energy, inspiration and healing when I feel physical or emotional pain.” </p>
 
-                <p>Using her unique style, composed from meditation and intuition, Lark brings subconscious reflections of nature into her art, inviting viewers to experience its healing powers. Her art also sends an environmental message combatting waste by serving as an example of how new life can be breathed into discarded objects, rekindling a positive future by acting pro-active in the present.</p>
-
-                 <p>Through workshops, Lark also shares with children and teenagers her transformational process of creating nature-related art. In doing so, she  helps youth feel what it is to be part of nature and attune themselves to the ecological issues which dominate our future.</p>
+                <p>Using her unique style, composed from meditation and intuition, Lark brings subconscious reflections of nature into her art, inviting viewers to experience its healing powers.</p>
 
                  <p>From the beginning of her art career, Lark’s art caught the attention of art lovers and gained recognition from art jurors including LA Weekly critic Peter Frank, Sweeney Art Gallery director Tyler Stallings, Santa Monica Museum of Art director Lisa Melandri and  MOCA curator Alma Ruiz.</p>
 
@@ -101,7 +99,8 @@
                     </div>
                 </div>
             </div>
-        </div>
+       </div>
+      </a>
     </div>
 
     <ul class="list-unstyled row portfolio-box-v1">
