--- a/client/templates/common/navbar.html
+++ b/client/templates/common/navbar.html
@@ -34,7 +34,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="larkgallery.devois.com/#bio">
+                            <a href="#bio">
                                 BIO
                             </a>
                         </li>
