--- a/client/templates/common/navbar.html
+++ b/client/templates/common/navbar.html
@@ -29,12 +29,12 @@
                     <ul class="nav navbar-nav">
                         <!-- Home -->
                         <li class="active">
-                            <a href="{{pathFor 'home'}}">
+                            <a href="{{pathFor 'home' hash='about'}}">
                                 About
                             </a>
                         </li>
                         <li>
-                            <a href="#bio">
+                            <a href="{{pathFor 'home' hash='bio'}}">
                                 BIO
                             </a>
                         </li>
