--- a/client/templates/pages/home.html
+++ b/client/templates/pages/home.html
@@ -12,7 +12,7 @@
             <div class="col-sm-9">
                 <div class="overflow-h">
                     <div class="pull-left headline1">
-                        <h2>Lark</h2>
+                        <h2 id="about">Lark</h2>
                         <span>Lark Pilinsky</span>
                     </div>
                     <ul class="social-icons pull-right">
@@ -64,14 +64,13 @@
 
 
     <div class="bg-grey content-sm">
-      <a id="bio"> 
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="text-center margin-bottom-50">
                         <div class="overflow-h">
                             <div class="pull-left headline1">
-                                <h2>BIO</h2>
+                                <h2 id="bio">BIO</h2>
                             </div>
                         </div>
                     </div>
@@ -100,7 +99,6 @@
                 </div>
             </div>
        </div>
-      </a>
     </div>
 
     <ul class="list-unstyled row portfolio-box-v1">
