larkpilinsly href fix

--- a/client/templates/common/footer.html
+++ b/client/templates/common/footer.html
@@ -36,7 +36,7 @@
                     <br/>
                     by clicking on these links:
                     <br/>
-                    <a href="www.larkpilinskyart.com">www.larkpilinskyart.com</a>
+                    <a href="https://www.larkpilinskyart.com">www.larkpilinskyart.com</a>
                     
                 </div><!--/col-md-3-->
                 <!-- End Address -->
