--- a/client/stylesheets/custom.css
+++ b/client/stylesheets/custom.css
@@ -128,12 +128,13 @@ p {
 
 .loader {
     position: fixed;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 100%;
+    left: 10%;
+    top: 20%;
+    width: 80%;
+    height: 75%;
     z-index: 9999;
     background: url('/img/page-loader.gif') 50% 50% no-repeat rgb(249,249,249);
+    opacity: 0.8;
 }
 
 h2:before { 
