--- a/client/templates/common/addinfo.html
+++ b/client/templates/common/addinfo.html
@@ -12,7 +12,7 @@
                         <form class="add-image-info">
                             <div class="form-group">
                                 <label>Title</label>
-                                   <input type="text" name="title" class="form-control" placeholder="title ..." value="{{title}}">
+                                   <input type="text" id="name" name="title" class="form-control" placeholder="title ..." value="{{title}}">
                             </div>
                             <div class="form-group">
                                 <label>Category</label> <br/>
