--- a/client/stylesheets/custom.css
+++ b/client/stylesheets/custom.css
@@ -128,12 +128,13 @@ p {
 
 .loader {
     position: fixed;
-    left: 10%;
-    top: 20%;
-    width: 80%;
-    height: 75%;
+    text-align: center;
+    left: 50%;
+    top: 80%;
+    width: 50px;
+    height: 50px;
     z-index: 9999;
-    background: url('/img/page-loader.gif') 50% 50% no-repeat rgb(249,249,249);
+    background: url('/img/loading-icon/small-envelop.gif') 50% 50% no-repeat rgb(249,249,249);
     opacity: 0.8;
 }
 
