custom changes to loading icon

--- a/client/templates/common/image.html
+++ b/client/templates/common/image.html
@@ -34,7 +34,7 @@
              </div>
           </div>
         </div>
-    <div class="loader"> Images are loading .... </div>
+    <div class="loader"> </div>
     </div>
 
 </template>
