--- a/client/stylesheets/custom.css
+++ b/client/stylesheets/custom.css
@@ -134,7 +134,7 @@ p {
     width: 50px;
     height: 50px;
     z-index: 9999;
-    background: url('/img/loading-icon/small-envelop.gif') 50% 50% no-repeat rgb(249,249,249);
+    background: url('/img/loading-icon/facebook.gif') 50% 50% no-repeat;
     opacity: 0.8;
 }
 
