Production bugs after jan 13th Changing page title ,adding meta description , changing fav icon

--- a/client/templates/common/head.html
+++ b/client/templates/common/head.html
@@ -1,14 +1,14 @@
 <head>
-    <title>Larisa Pilinsky</title>
+    <title>Lark Gallery</title>
 
     <!-- Meta -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
     <meta name="author" content="">
-
+    <meta name="description" content="Abstract collages, assemblages and painting, which Lark creates by recycling found objects and processing them through spiritual meditation, encouraging images to appear out of her subconscious, awakening both familiar and unfamiliar thoughts in viewers. Learning about her materials by exploring both their formal and their narrative qualities, she simultaneously reformulates them according to her deeply emotional, poetically romantic sense of beauty..">
+    <meta name="keywords" content="Lark art, Lark artist, fine arts, paintings, Lark, Larkgallery, Larisa, Pilinsky collages, assemblages, online gallery, artworks, spiritual art, abstract art, modern art, abstract landscape, Russia, Bunker art group">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="/img/lark/Larkgallerylogo.png">
 
     <!-- Web Fonts -->
     <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600&amp;subset=cyrillic,latin'>
