--- a/client/templates/common/login.html
+++ b/client/templates/common/login.html
@@ -6,19 +6,30 @@
     <br />
 
     {{else}}
-         <div class="container">
-            <form class="form-signin">
-                <h2 class="form-signin-heading">Sign In </h2>
-                <label for="email" class="sr-only">Email</label>
-                <input type="text" id="email" name="email" class="form-control" placeholder="email" required autofocus>
-                <label for="password" class="sr-only">Password</label>
-                <input type="password" id="password" name="password" class="form-control" placeholder="password" required autofocus>
-                <br />
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
-              
-            </form>       
-            <br />
+    <div class="row">
+        <div class="col-md-4 col-xs-3 col-lg-5">
         </div>
+        <div class="col-md-6 col-xs-6 col-lg-6">
+           <form class="form-signin">
+              <div class="panel panel-info">
+                 <div class="panel-heading">  
+                      <h3 class="form-signin-heading">Sign In </h3>
+                 </div>
+                 <div class="panel-body">
+                      <label for="email" class="plain">Username</label>
+                      <input type="text" id="email" name="email" class="form-control" placeholder="email" required autofocus>
+                      </br>
+                      <label for="password" class="plain">Password</label>
+                       <input type="password" id="password" name="password" class="form-control" placeholder="password" required autofocus>
+                      </br>
+                  </div>
+                  <div class="panel-footer">
+                       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
+                 </div>
+              </div>
+            </form>   
+           </div>    
+         </div>
     {{/if}} 
 
 
