div cbp-item removed which covered cbp-others

--- a/client/templates/common/login.html
+++ b/client/templates/common/login.html
@@ -17,7 +17,7 @@
                  </div>
                  <div class="panel-body">
                       <label for="email" class="plain">Username</label>
-                      <input type="text" id="email" name="email" class="form-control" placeholder="email" required autofocus>
+                      <input type="text" id="email" name="email" class="form-control" placeholder="user name" required autofocus>
                       <br />
                       <label for="password" class="plain">Password</label>
                        <input type="password" id="password" name="password" class="form-control" placeholder="password" required autofocus>
