change request email from Lark client The last paragraph in BIO 3 links are highlighted and on click it popups the image article

--- a/client/templates/pages/home.html
+++ b/client/templates/pages/home.html
@@ -87,7 +87,58 @@
 
                  <p>From the beginning of her art career, Lark’s art caught the attention of art lovers and gained recognition from art jurors including LA Weekly critic Peter Frank, Sweeney Art Gallery director Tyler Stallings, Santa Monica Museum of Art director Lisa Melandri and  MOCA curator Alma Ruiz.</p>
 
-                 <p>Articles about Lark's art and achievements were published in the Immigrant Magazine, the Art-to-Art Palette Journal and Online Art Magazine "Crave” describing her work and career.</p> 
+                 <p>Articles about Lark's art and achievements were published in the 
+                 <u><b> 
+                         <a data-toggle="modal" href="#Magazine">Immigrant Magazine,</a>
+                 </b></u> the 
+                 <u><b>
+                          <a data-toggle="modal" href="#Art">Art-to-Art Palette Journal</a>
+                 </b></u> and 
+                 <u><b>
+                    <a data-toggle="modal" href="#Work">Online Art Magazine "Crave”</a>
+                 </b></u> describing her work and career.
+                 </p>          
+                 
+
+<div id="Magazine" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+     <div class="modal-dialog modal-sm">
+ <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        
+      </div>
+      <div class="modal-body">
+           <img class="img-responsive" id="a" src="/img/bio/Article-by-By-Tony-Clark-web.jpg" alt="">
+      </div>
+      <div class="modal-footer">
+       
+      </div>
+    </div>
+  </div>
+ </div>
+</div>
+
+<div id="Art" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+ <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+           <img class="img-responsive" id="a" src="/img/bio/Crave-Magazine-about-Lark-Pilinsky.jpg" alt="">
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="Work" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+ <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+          <img class="img-responsive" id="a" src="/img/bio/Immigrant-Magazine#1-2_Lark-Larisa-Pilinsky.jpg" alt="">
+      </div>
+    </div>
+  </div>
+</div>
+
+
           <br>
                 </div>
                 <div class="col-md-6">
