--- a/client/templates/pages/home.html
+++ b/client/templates/pages/home.html
@@ -89,25 +89,25 @@
 
                  <p>Articles about Lark's art and achievements were published in the 
                  <u><b> 
-                         <a data-toggle="modal" href="#Magazine">Immigrant Magazine,</a>
+                         <a class="bio-links" data-toggle="modal" href="#Magazine">Immigrant Magazine,</a>
                  </b></u> the 
                  <u><b>
-                          <a data-toggle="modal" href="#Art">Art-to-Art Palette Journal</a>
+                          <a class="bio-links" data-toggle="modal" href="#Art">Art-to-Art Palette Journal</a>
                  </b></u> and 
                  <u><b>
-                    <a data-toggle="modal" href="#Work">Online Art Magazine "Crave”</a>
+                    <a class="bio-links" data-toggle="modal" href="#Work">Online Art Magazine "Crave”</a>
                  </b></u> describing her work and career.
-                 </p>          
-                 
+                 </p>  
+
    <div id="Magazine" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
      <div class="modal-dialog">
        <div class="modal-content">
          <div class="modal-body">
-           <img class="img-responsive" id="a" src="/img/bio/Article-by-By-Tony-Clark-web.jpg" alt="">
-          </div>
+          <img class="img-responsive" id="a" src="/img/bio/Immigrant-Magazine#1-2_Lark-Larisa-Pilinsky.jpg" alt="">
        </div>
+      </div>
      </div>
-   </div>
+   </div>       
 
   <div id="Art" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
      <div class="modal-dialog">
@@ -120,16 +120,15 @@
    </div>
 
    <div id="Work" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-     <div class="modal-dialog">
-       <div class="modal-content">
-         <div class="modal-body">
-          <img class="img-responsive" id="a" src="/img/bio/Immigrant-Magazine#1-2_Lark-Larisa-Pilinsky.jpg" alt="">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-body">
+            <img class="img-responsive" id="a" src="/img/bio/Article-by-By-Tony-Clark-web.jpg" alt="">
+          </div>
+         </div>
        </div>
-      </div>
-     </div>
-   </div>
-          <br>
-      </div>
+    </div>
+ </div>
             <div class="col-md-6">
                   <div class="thumbnails-v1">
                         <div class="thumbnail-img">
