images are swapped , Made the underline only for the text.

--- a/client/templates/pages/home.html
+++ b/client/templates/pages/home.html
@@ -89,14 +89,11 @@
 
                  <p>Articles about Lark's art and achievements were published in the 
                  <u><b> 
-                         <a class="bio-links" data-toggle="modal" href="#Magazine">Immigrant Magazine,</a>
-                 </b></u> the 
+                   <a class="bio-links" data-toggle="modal" href="#Magazine">Immigrant Magazine</a></b></u>, the 
                  <u><b>
-                          <a class="bio-links" data-toggle="modal" href="#Art">Art-to-Art Palette Journal</a>
-                 </b></u> and 
+                   <a class="bio-links" data-toggle="modal" href="#Art">Art-to-Art Palette Journal</a></b></u> and 
                  <u><b>
-                    <a class="bio-links" data-toggle="modal" href="#Work">Online Art Magazine "Crave”</a>
-                 </b></u> describing her work and career.
+                   <a class="bio-links" data-toggle="modal" href="#Work">Online Art Magazine "Crave”</a></b></u> describing her work and career.
                  </p>  
 
    <div id="Magazine" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -107,9 +104,20 @@
        </div>
       </div>
      </div>
-   </div>       
+   </div>      
 
-  <div id="Art" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+   <div id="Art" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-body">
+            <img class="img-responsive" id="a" src="/img/bio/Article-by-By-Tony-Clark-web.jpg" alt="">
+          </div>
+         </div>
+       </div>
+    </div>
+ </div> 
+
+  <div id="Work" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
      <div class="modal-dialog">
        <div class="modal-content">
         <div class="modal-body">
@@ -119,16 +127,6 @@
      </div>
    </div>
 
-   <div id="Work" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-body">
-            <img class="img-responsive" id="a" src="/img/bio/Article-by-By-Tony-Clark-web.jpg" alt="">
-          </div>
-         </div>
-       </div>
-    </div>
- </div>
             <div class="col-md-6">
                   <div class="thumbnails-v1">
                         <div class="thumbnail-img">
