double quotes modified

--- a/client/templates/pages/home.html
+++ b/client/templates/pages/home.html
@@ -93,7 +93,7 @@
                  <u><b>
                    <a class="bio-links" data-toggle="modal" href="#Art">Art-to-Art Palette Journal</a></b></u> and 
                  <u><b>
-                   <a class="bio-links" data-toggle="modal" href="#Work">Online Art Magazine "Crave”</a></b></u> describing her work and career.
+                   <a class="bio-links" data-toggle="modal" href="#Work">Online Art Magazine "Crave"</a></b></u> describing her work and career.
                  </p>  
 
    <div id="Magazine" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
